# Susurrus

./: .gitignore  Cargo.toml  OPERATIONAL-TEST.md  README.md
.github/workflows/: ci.yml
crates/susurrus-audio/: Cargo.toml
crates/susurrus-audio/src/: capture.rs  codec.rs  lib.rs  mixer.rs  playback.rs
crates/susurrus-core/: Cargo.toml
crates/susurrus-core/src/: cernere.rs  compose.rs  config.rs  db.rs  indexer.rs  lib.rs  presence.rs  query.rs  store.rs  text.rs
crates/susurrus-core/tests/: compose_e2e.rs  indexer_e2e.rs
crates/susurrus-md/: Cargo.toml
crates/susurrus-md/src/: lib.rs
crates/susurrus-memoria/: Cargo.toml
crates/susurrus-memoria/src/: lib.rs
crates/susurrus-rt/: Cargo.toml
crates/susurrus-rt/src/: lib.rs  link.rs  magic.rs  payload.rs  transport.rs  typing.rs
crates/susurrus-sdk/: Cargo.toml
crates/susurrus-sdk/src/: abi.rs  client.rs  lib.rs  spatial.rs  types.rs
crates/susurrus-synergos/: Cargo.toml
crates/susurrus-synergos/src/: backend.rs  bridge.rs  lib.rs
reference/: README.md  concordia-worldchat.tsx
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
spec/: DB-SCHEMA.md  MD-SCHEMA.md  PROTOCOL.md  SPATIAL.md  SPEC.md
susurrus-tauri/: package.json
susurrus-tauri/frontend/: index.html  package-lock.json  package.json  vite.config.ts
susurrus-tauri/frontend/src/: App.tsx  api.ts  styles.css
susurrus-tauri/src-tauri/: Cargo.toml  tauri.conf.json
susurrus-tauri/src-tauri/capabilities/: default.json
susurrus-tauri/src-tauri/src/: commands.rs  http.rs  lib.rs  main.rs  state.rs
susurrus-tauri/src-tauri/tests/: smoke_single_machine.rs
