[package]
name = "susurrus-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus audio codec + capture/playback (Opus + cpal). v1.0 Spatial Chat 用。"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing.workspace = true
chrono.workspace = true
audiopus = { version = "0.3.0-rc.0" }
cpal = "0.16"

susurrus-rt  = { path = "../susurrus-rt" }
susurrus-sdk = { path = "../susurrus-sdk" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
