[package]
name = "susurrus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus daemon. Cernere auth + Synergos bridge + SQLite cache + md store"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
blake3.workspace = true
reqwest.workspace = true

susurrus-md = { path = "../susurrus-md" }

# Synergos crate (path 依存)
# synergos-core = { workspace = true }
# synergos-net  = { workspace = true }
# synergos-ipc  = { workspace = true }
# v0.0 では Synergos との結線は susurrus-rt 側に集約するためここでは optional
