[package]
name = "susurrus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus daemon. Cernere auth + Synergos bridge + SQLite cache + md store"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
blake3.workspace = true
reqwest.workspace = true
walkdir = "2"
pulldown-cmark.workspace = true

susurrus-md = { path = "../susurrus-md" }
susurrus-rt = { path = "../susurrus-rt" }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
indoc = "2"

# テスト helper で tempfile を src 側でも使うため
[features]
default = []
