[package]
name = "susurrus-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus overlay SDK for game engines / tools / viewers (Rust crate + C ABI)."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "susurrus_sdk"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
once_cell = "1"
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
