[package]
name = "susurrus-synergos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus ↔ Synergos IPC bridge. md ファイル commit を chain に乗せる SLEEP 経路。"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
async-trait = "0.1"
futures-lite = "2"

# Synergos crate (path 依存)
synergos-ipc = { path = "../../../Synergos/synergos-ipc" }

[dev-dependencies]
tempfile = "3"
