[package]
name = "susurrus-synergos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus ↔ Synergos IPC bridge. md ファイル commit を chain に乗せる SLEEP 経路。"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
async-trait = "0.1"
futures-lite = "2"

# Susurrus realtime types
susurrus-rt = { path = "../susurrus-rt" }

# Synergos の IPC 型定義 (peer-stream-extension PR #60 マージ後の main を参照)
# ローカル開発時は path override が便利だが、 sibling repo が無い CI でも動くよう
# 既定は git dep。 path override は workspace の [patch.crates-io] か個人 Cargo
# で差し替える。
synergos-ipc = { git = "https://github.com/LUDIARS/Synergos.git", branch = "main" }

[dev-dependencies]
tempfile = "3"
