[package]
name = "susurrus-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus Tauri 2 GUI shell. Multi-window with detach + window-attach."

[lib]
name = "susurrus_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tauri = { version = "2", features = [] }

susurrus-core = { path = "../../crates/susurrus-core" }
susurrus-md   = { path = "../../crates/susurrus-md" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
