[package]
name = "susurrus-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Susurrus Tauri 2 GUI shell. Multi-window with detach + window-attach."

[lib]
name = "susurrus_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
chrono.workspace = true
uuid.workspace = true
parking_lot = "0.12"
dirs-next = "2"
futures-lite = "2"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { workspace = true }

susurrus-core     = { path = "../../crates/susurrus-core" }
susurrus-md       = { path = "../../crates/susurrus-md" }
susurrus-rt       = { path = "../../crates/susurrus-rt" }
susurrus-synergos = { path = "../../crates/susurrus-synergos" }
susurrus-memoria  = { path = "../../crates/susurrus-memoria" }
susurrus-audio    = { path = "../../crates/susurrus-audio", optional = true }
susurrus-sdk      = { path = "../../crates/susurrus-sdk" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
audio = ["dep:susurrus-audio"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
serde_json = { workspace = true }
http-body-util = "0.1"
